   * Fixed bug #22095: An assertion failure in the gamestate inspector.
   * Fixed bug #22144: An assertion failure with empty labels in a listbox.
   * The :inspect dialog now uses the same function as saved games to generate
     WML in text form instead of a simplified version.
   * Added a button to copy the currently displayed content from the :inspect
     dialog to clipboard.
   * Fixed the WML load error dialog not displaying an add-on name instead of
     falling back to its directory name if the add-on contains an outdated
     _info.cfg file lacking an [info]title= value.
   * Fixed most of the minimap buttons and the End Turn button appearing
     without contents or in the wrong state during WML start events until they
     are interacted with or control is given to the player for the first time.
   * Added a button to copy the in-game Chat Log dialog contents to clipboard.
   * Fixed dependency check on MP mod locked to scenario on create game load
     checking against the first scenario instead of the last played scenario.
   * Fixed AI engine names in the MP game setup screen being translated to the
     language selected when Wesnoth was started rather than the current
     language (bug #22092).
   * Fixed mouse tracking issue with workaround by changing the default window
     resolution for OS X to 800 x 600 (bug #20332).
   * Removed the "Replay viewer" text label from the replay controller theme,
     because it caused problems for translators and was unnecessary
   * Fixed bug #22337: Bug in inspect long arrays
 * WML engine:
   * Fixed a regression in 1.11.14 causing WML parser/preprocessor errors to
     not interrupt the game load sequence or display an error message in-game,
     resulting in loading malformed/incomplete WML data
     <http://r.wesnoth.org/p571380>.
   * Schema validator messages now conform better to the new WML
     parser/preprocessor diagnostics format introduced in version 1.11.10.
 * Miscellaneous and bug fixes: