@@ -96,6 +96,8 @@ Version 1.11.16:
      WML in text form instead of a simplified version.
    * Added a button to copy the currently displayed content from the :inspect
      dialog to clipboard.
+   * WML array elements are now displayed with subscripts in the :inspect
+     dialog.
    * Fixed the WML load error dialog not displaying an add-on name instead of
      falling back to its directory name if the add-on contains an outdated
      _info.cfg file lacking an [info]title= value.
